--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
@@ -1,3 +1,5 @@
+{% extends host_template %}
+
 {% load i18n comments cyclope_utils fb_versions %}
 
 {% if not user.is_authenticated and not current_object.published %}
