Fixed bug in base.html

--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
@@ -174,7 +174,7 @@
        {% block page_footer %}
  <div class="footer">
   <div class="container">
-      {% region 'earth' %}
+      {% region 'footer' %}
       <span id="creativecommons">Los contenidos de este sitio web están bajo una
         <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.es_CO">
           Licencia Creative Commons BY-NC-ND
