--- a/cyclope/core/collections/templates/collections/category_contents_base.html
+++ b/cyclope/core/collections/templates/collections/category_contents_base.html
@@ -4,75 +4,79 @@
 
 {% block content %}
 
-{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
+  {% if category.collection.visible %}
 
-  {% if view_options.navigation == "TOP" %}
-    {% include 'cyclope/breadcrumb_block.html' %}
-  {% endif %}
+    {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
 
-	<div class="category_description">
-    {% if view_options.show_title %}
-			<span class="category_title">
-				<a href="{% url category-default category.slug %}">{{ category.name }}</a>
-			</span>
-		{% endif %}
+      {% if view_options.navigation == "TOP" %}
+        {% include 'cyclope/breadcrumb_block.html' %}
+      {% endif %}
 
-		{% if category.description and view_options.show_description or category.image and view_options.show_image %}
-		<div class="collection_teaser">
-			{% if category.image and view_options.show_image %}
-			<img class="image" src="{% version category.image.path 'fb_thumb' %}" border="0"/>
-			{% endif %}
-			{% if category.description and view_options.show_description %}
-			<div class="summary">{{ category.description|smart_style }}</div>
-			{% endif %}
-		</div>
-		{% endif %}
-</div>
+        <div class="category_description">
+        {% if view_options.show_title %}
+                <span class="category_title">
+                    <a href="{% url category-default category.slug %}">{{ category.name }}</a>
+                </span>
+            {% endif %}
 
-{% elif CYCLOPE_THEME_TYPE == 'classic' %}
-
-  {% if not request.hide_frontend_edit %}
-    {% per_category_perms category as cat_perms %}
-    {% if cat_perms.add_content %}
-    <div class="category_add_content">
-      <span onClick="$(this).siblings('ul').toggle()">{% trans "Add content" %}</span>
-      <ul class="content_types" style="display:none;">
-        {% for c_type in category.collection.content_types.all %}
-        <li>
-          <a href="/admin/{{ c_type.app_label }}/{{ c_type.model }}/add?_frontend=1&_popup=1&_from_category={{category.slug}}" class="add_content add_{{ c_type.model }}">
-            {{ c_type.name.capitalize }}
-          </a>
-        </li>
-        {% endfor %}
-      </ul>
+            {% if category.description and view_options.show_description or category.image and view_options.show_image %}
+            <div class="collection_teaser">
+                {% if category.image and view_options.show_image %}
+                <img class="image" src="{% version category.image.path 'fb_thumb' %}" border="0"/>
+                {% endif %}
+                {% if category.description and view_options.show_description %}
+                <div class="summary">{{ category.description|smart_style }}</div>
+                {% endif %}
+            </div>
+            {% endif %}
     </div>
+
+    {% elif CYCLOPE_THEME_TYPE == 'classic' %}
+
+      {% if not request.hide_frontend_edit %}
+        {% per_category_perms category as cat_perms %}
+        {% if cat_perms.add_content %}
+        <div class="category_add_content">
+          <span onClick="$(this).siblings('ul').toggle()">{% trans "Add content" %}</span>
+          <ul class="content_types" style="display:none;">
+            {% for c_type in category.collection.content_types.all %}
+            <li>
+              <a href="/admin/{{ c_type.app_label }}/{{ c_type.model }}/add?_frontend=1&_popup=1&_from_category={{category.slug}}" class="add_content add_{{ c_type.model }}">
+                {{ c_type.name.capitalize }}
+              </a>
+            </li>
+            {% endfor %}
+          </ul>
+        </div>
+        {% endif %}
+      {% endif %}
+
+      {% if view_options.navigation == "TOP" %}
+        {% include 'collections/hierarchycal_navigation_block.html' %}
+      {% endif %}
+
+      {% if view_options.show_title %}
+      <div class="category_title">
+        <h1 class="title">
+          <a href="{% url category-default category.slug %}">{{ category.name }}</a>
+        </h1>
+      </div>
+      {% endif %}
+
+      {% if category.description and view_options.show_description or category.image and view_options.show_image %}
+      <div class="collection_teaser">
+        {% if category.image and view_options.show_image %}
+        <img class="image" src="{% version category.image.path 'small' %}" border="0"/>
+        {% endif %}
+        {% if category.description and view_options.show_description %}
+        <div class="summary">{{ category.description|smart_style }}</div>
+        {% endif %}
+      </div>
+      {% endif %}
+
     {% endif %}
+    
   {% endif %}
-
-  {% if view_options.navigation == "TOP" %}
-    {% include 'collections/hierarchycal_navigation_block.html' %}
-  {% endif %}
-
-  {% if view_options.show_title %}
-  <div class="category_title">
-    <h1 class="title">
-      <a href="{% url category-default category.slug %}">{{ category.name }}</a>
-    </h1>
-  </div>
-  {% endif %}
-
-  {% if category.description and view_options.show_description or category.image and view_options.show_image %}
-  <div class="collection_teaser">
-    {% if category.image and view_options.show_image %}
-    <img class="image" src="{% version category.image.path 'small' %}" border="0"/>
-    {% endif %}
-    {% if category.description and view_options.show_description %}
-    <div class="summary">{{ category.description|smart_style }}</div>
-    {% endif %}
-  </div>
-  {% endif %}
-
-{% endif %}
 
   {% block category_content %}{% endblock %}
   {% spaceless %}
