--- a/cyclope/templates/search/search.html
+++ b/cyclope/templates/search/search.html
@@ -2,14 +2,16 @@
 {% load i18n cyclope_utils crispy_forms_tags %}
 
 {% block extra_head %}
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-ui-1.11.4-min.js"></script>
-    <link href="{{ CYCLOPE_STATIC_URL }}css/jquery-ui-1.11.4-min.css" rel="stylesheet">
-    <script type="text/javascript">
+    {% if CYCLOPE_SEARCH_DATE %}
+        <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-ui-1.11.4-min.js"></script>
+        <link href="{{ CYCLOPE_STATIC_URL }}css/jquery-ui-1.11.4-min.css" rel="stylesheet">
+        <script type="text/javascript">
         $(function() {
 		$("#id_start_date").datepicker();
 		$("#id_end_date").datepicker();
 	 }); 
-    </script>
+        </script>
+    {% endif %}
 {% endblock %}
 
 {% block content %}
