--- a/cyclope/apps/articles/templates/admin/articles/article/change_form.html
+++ b/cyclope/apps/articles/templates/admin/articles/article/change_form.html
@@ -1,2 +1,18 @@
 {% extends "admin/base_content_change_form.html" %}
-
+{% block extrahead %}
+	{{ block.super }}
+	<script type="text/javascript">
+	$(function(){
+		//form becomes widget
+		$('#mediaUpload').mediaWidget();
+		// button triggers widget
+		$(".clickMe").click(function(){
+			var widget = $("#mediaUpload").mediaWidget("position", this).mediaWidget("open");
+		});
+	});
+	</script>
+{% endblock %}
+{% block content %}
+	{{ block.super }}
+	{% include "admin/articles/article/media_upload.html" %}
+{% endblock %}
