jQuery v.2 in noConflict mode makes widget work old widget pop-up disabled widget is still missing bootstrap styles

--- a/cyclope/apps/related_admin/templates/related_admin/gfk_widget.html
+++ b/cyclope/apps/related_admin/templates/related_admin/gfk_widget.html
@@ -5,7 +5,7 @@
   <div class="current-object">
     <div class="search-widget">
         <label>{% trans "Search" %}</label>
-        <a href="{{ related }}{{ url}}" class="related-lookup float-left" id="lookup_id_{{ name }}" onclick="return showGenericRelatedObjectLookupPopup('{{ ct_field }}', this, '../../../{{ url }}');">
+        <a href="{{ related }}{{ url}}" class="related-lookup float-left" id="lookup_id_{{ name }}">
            <div class="search-widget-image"> <img src="{{static_admin}}img/selector-search.gif" width="16" height="16" alt="Lookup" /></div>
         </a>
     </div>
