media widget success POST/REDIRECT/GET with alert message message fades out after 8s and displays image name

--- a/cyclope/apps/media_widget/templates/media_widget/pictures_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pictures_upload.html
@@ -5,9 +5,23 @@
     <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}js/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}js/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}js/bootstrap/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        $(function(){ // clean message alerts after 8s
+            $(".message-row").delay(8000).fadeOut();
+        });
+    </script>
 </head>
 <body>
     <div class="container-fluid">
+        {% if messages %}
+            {% for message in messages %}
+                <div  class="row message-row">
+                    <div class="col-xs-12 {% if message.tags %} alert alert-{{ message.tags }}{% endif %}">
+                        {{ message }}
+                    </div>
+                </div>
+            {% endfor %}
+        {% endif %}
         <div class="row">
             <div class="col-xs-12">
                 <ul class="nav nav-tabs" role="tablist">
