uploaded picture associated to article's FK article id is passed as query string to iframe, then rendered as hidden input and passed in form submission, also appended to succes redirect url this could be done more elegantly using url arguments

--- a/cyclope/apps/media_widget/templates/media_widget/pictures_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pictures_upload.html
@@ -42,6 +42,11 @@
                     <div role="tabpanel" class="tab-pane active" id="upload">
                         <form method="POST" action="{% url pictures-create %}" enctype="multipart/form-data">
                             {% csrf_token %}
+                            <div style="display: none;">
+                                {% for hidden in form.hidden_fields %}
+                                    {{ hidden }}
+                                {% endfor %}
+                            </div>
                             {{ form.non_field_errors }}
                             <!--
                             <div class="pull-right">
