--- a/cyclope/apps/articles/templates/admin/articles/article/media_upload.html
+++ b/cyclope/apps/articles/templates/admin/articles/article/media_upload.html
@@ -1,3 +1,3 @@
 <div id="mediaUpload">
-  <iframe src="/media_widget/pictures/new" width="380" height="470" frameborder="0"></iframe> 
+  <iframe src="/media_widget/pictures/new?article_id={{object_id}}" width="380" height="470" frameborder="0"></iframe> 
 </div>
