--- a/cyclope/apps/media_widget/templates/media_widget/pictures_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pictures_upload.html
@@ -40,13 +40,8 @@
                 </ul>
                 <div class="tab-content">
                     <div role="tabpanel" class="tab-pane active" id="upload">
-                        <form method="POST" action="{% url pictures-create %}" enctype="multipart/form-data">
+                        <form method="POST" action="{% url pictures-create article_id=article_id %}" enctype="multipart/form-data">
                             {% csrf_token %}
-                            <div style="display: none;">
-                                {% for hidden in form.hidden_fields %}
-                                    {{ hidden }}
-                                {% endfor %}
-                            </div>
                             {{ form.non_field_errors }}
                             <!--
                             <div class="pull-right">
