--- a/cyclope/apps/media_widget/templates/media_widget/pictures_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pictures_upload.html
@@ -62,14 +62,14 @@
                                 <input type="checkbox" name="show_desc" value="no">
                             </div>
                             -->
-                            <div class="form-group {%if form.name.errors%}has-error{%endif%}">
+                            <div class="form-group {%if form.description.errors%}has-error{%endif%}">
                                 <label for="fileDesc">Descripci&oacute;n</label>
                                 {{ form.description }}
                                 <span id="helpName" class="help-block">
                                     {{ form.description.errors }}
                                 </span>
                             </div>
-                            <div class="form-group {%if form.name.errors%}has-error{%endif%}">
+                            <div class="form-group {%if form.image.errors%}has-error{%endif%}">
                                 <label for="file">Archivo</label>
                                 {{ form.image }}
                                 <span id="helpName" class="help-block">
