display thumbnail in picture widget in article admin (that was what that widget code was for...) using Generic FK app logic.

--- a/cyclope/apps/media_widget/templates/media_widget/media_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_widget.html
@@ -1,1 +1,17 @@
-<button id="media_widget_button" type="button" value="">Seleccionar</button> 
+<table class="mw_table">
+    <tr>
+        <td class="mw_button">
+            <button id="media_widget_button" type="button" value="">Seleccionar</button>
+        </td>
+        <td class="mw_thumbnail" align="center">
+            {% if obj_repr %}
+                {{ obj_repr|safe }}
+            {% else %}
+                <div class="mw_no_picture">
+                    <br/>
+                    Imágenes del artículo...
+                </div>
+            {% endif %}
+        </td>
+    </tr>
+</table>
