--- a/cyclope/apps/articles/templates/admin/articles/article/media_upload.html
+++ b/cyclope/apps/articles/templates/admin/articles/article/media_upload.html
@@ -1,3 +1,3 @@
 <div id="mediaUpload">
-  <iframe src="/media_widget/pictures/new/{{object_id}}" width="380" height="470" frameborder="0"></iframe> 
+  <iframe src="/media_widget/pictures/new/{{object_id}}" width="100%" height="100%" frameborder="0" style="min-height: 470px;"></iframe> 
 </div>
