--- a/cyclope/apps/media_widget/templates/media_widget/pictures_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pictures_upload.html
@@ -1,3 +1,4 @@
+{% load fb_versions %}
 <head>
     <!--styles-->
     <link href="{{CYCLOPE_STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
@@ -91,9 +92,22 @@
                         </form>                    
                     </div>
                     <div role="tabpanel" class="tab-pane" id="search">
-                        <br />
-                        <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                        Estamos trabajando para Ud.
+                        <form method="POST" action="{% url pictures-update article_id=article_id %}">
+                            {% csrf_token %}
+                            <table class="table table-striped table-condensed">                
+                                {% for picture in pictures_list %}
+                                <tr>
+                                    <td>
+                                        <button class="btn btn-primary btn-xs" name="picture_id" value="{{picture.pk}}">Seleccionar</button>
+                                    </td>
+                                    <td>{{ picture.name }}</td>
+                                    <td>
+                                        <a href="{{ picture.image }}" target="_blank"><img src="{% version picture.image.path 'thumbnail' %}" title="{{picture.description}}"/></a>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </table>
+                        </form>
                     </div>
                 </div>
             </div>
