media widget success refreshes article admin's gfk picture representation

--- a/cyclope/apps/media_widget/templates/media_widget/media_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_widget.html
@@ -5,7 +5,9 @@
         </td>
         <td class="mw_thumbnail" align="center">
             {% if obj_repr %}
-                {{ obj_repr|safe }}
+                <div class="object-representation">
+                    {{ obj_repr|safe }}
+                </div>
             {% else %}
                 <div class="mw_no_picture">
                     <br/>
