able to call media widget from markitup button main difficulty was markitup was tied to django's jquery (1.4) while widget used jquery 2 in noConflict mode django-markitup v1.0 uses markitup v1.1.6.2 which isn't compatible with jquery>1.6. should be updated to 1.1.14 which supports jquery v.1.9+ (now it's working with jquery v1.11.4 thanks to jquery migrate plugin) Changelog: - importing jquery 1.11.4 in admin media, instead of v2. TODO not sure if this should be in all admin or in article's only. - moved jquery-ui and widget script to article admin media instead of general admin indeed. had to move them from form media to change form to force l oad order. - invoking media widget instead of popup in markitup set.js, of course - enclosed categories and related contents chained select scripts into self-invoking functions with django's jquery in local scope since they use v1.4

--- a/cyclope/apps/articles/templates/admin/articles/article/change_form.html
+++ b/cyclope/apps/articles/templates/admin/articles/article/change_form.html
@@ -1,4 +1,9 @@
 {% extends "admin/base_content_change_form.html" %}
+{% block extrahead %}
+    {{ block.super }}
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-ui-1.11.4-min.js"></script>
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/cyclope_media_widget.js"></script>
+{% endblock %}
 {% block content %}
 	{{ block.super }}
 	{% include "admin/articles/article/media_upload.html" %}
