--- a/cyclope/templates/admin/change_form.html
+++ b/cyclope/templates/admin/change_form.html
@@ -3,11 +3,11 @@
 {% load url from future %}
 {% load admin_urls %}
 
-{% block extrahead %}{{ block.super }}
+{% block extrahead %}
+{{ block.super }}
 {% url 'admin:jsi18n' as jsi18nurl %}
 <script type="text/javascript" src="{{ jsi18nurl|default:"../../../jsi18n/" }}"></script>
 {{ media }}
-<script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/reuse_django_jquery.js"></script>
 <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery.chainedSelect.js"></script>
 <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/less.min.js"></script>
 {% endblock %}
