--- a/cyclope/apps/articles/templates/admin/articles/article/pictures_iframe.html
+++ b/cyclope/apps/articles/templates/admin/articles/article/pictures_iframe.html
@@ -1,3 +1,3 @@
-<div id="mediaUpload">
+<div id="pictures_iframe">
   <iframe src="/media_widget/pictures/new/{{object_id}}" width="100%" height="100%" frameborder="0" style="min-height: 470px;"></iframe> 
 </div>
