--- a/cyclope/apps/media_widget/templates/media_widget/media_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_upload.html
@@ -1,95 +1,106 @@
-<div id="mediaUpload" class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="dropdown">
-              <button class="btn btn-default btn-block dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                Tipo de contenido a insertar
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li><a href="#">Im&aacute;gen</a></li>
-                <li><a href="#">Audio</a></li>
-                <li><a href="#">Video</a></li>
-                <li><a href="#">Flash</a></li>
-              </ul>
-            </div>
-        </div>
-    </div>
-    <br />
-    <div class="row">
-        <div class="col-md-12">
-            <div class="dropdown">
-              <button class="btn btn-default btn-block dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                Alineaci&oacute;n
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                <li><a href="#">Izquierda</a></li>
-                <li><a href="#">Derecha</a></li>
-              </ul>
-            </div>
-        </div>
-    </div>
-    <hr />
-    <div class="row">
-        <div class="col-md-12">
-            <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active">
-                    <a href="#upload" aria-controls="upload" role="tab" data-toggle="tab">
-                        <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
-                        Subir
-                    </a>
-                </li>
-                <li role="presentation">
-                    <a href="#search" aria-controls="search" role="tab" data-toggle="tab">
-                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                        Buscar en biblioteca
-                    </a>
-                </li>
-            </ul>
-            <div class="tab-content">
-                <div role="tabpanel" class="tab-pane active" id="upload">
-                    <form>
-                        <div class="pull-right">
-                            Mostrar junto al contenido
-                            <input type="checkbox" name="show_name" value="no">
-                        </div>
-                        <div class="form-group">
-                            <label for="fileName">Nombre</label>
-                            <input type="text" class="form-control" id="fileName" placeholder="Nombre">
-                        </div>
-                        <div class="pull-right">
-                            Mostrar junto al contenido
-                            <input type="checkbox" name="show_desc" value="no">
-                        </div>
-                        <div class="form-group">
-                            <label for="fileDesc">Descripci&oacute;n</label>
-                            <input type="text" class="form-control" id="fileDesc">
-                        </div>
-                        <div class="form-group">
-                            <label for="file">Archivo</label>
-                            <input type="file" id="file">
-                            <p class="help-block">Seleccionar archivo</p>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <button type="submit" class="btn btn-danger btn-block">
-                                    <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
-                                    Subir
-                                </button>
-                            </div>
-                            <div class="col-md-6 text-muted" style="font-size: 10px;">
-                                Recuerda que puedes agregar m&aacute;s datos a este contenido desde la Biblioteca Multimedia.
-                            </div>
-                        </div>
-                    </form>                    
-                </div>
-                <div role="tabpanel" class="tab-pane" id="search">
-                    <br />
-                    <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                    Estamos trabajando para Ud.
+{% load fb_versions %}
+<head>
+    <!--styles-->
+    <link href="{{CYCLOPE_STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
+    <!--scripts-->
+    <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}js/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}js/bootstrap/bootstrap.min.js"></script>
+</head>
+<body>
+    <div id="mediaUpload" class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="dropdown">
+                  <button class="btn btn-default btn-block dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    Tipo de contenido a insertar
+                    <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li><a href="#">Im&aacute;gen</a></li>
+                    <li><a href="#">Audio</a></li>
+                    <li><a href="#">Video</a></li>
+                    <li><a href="#">Flash</a></li>
+                  </ul>
                 </div>
             </div>
         </div>
+        <br />
+        <div class="row">
+            <div class="col-md-12">
+                <div class="dropdown">
+                  <button class="btn btn-default btn-block dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    Alineaci&oacute;n
+                    <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                    <li><a href="#">Izquierda</a></li>
+                    <li><a href="#">Derecha</a></li>
+                  </ul>
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active">
+                        <a href="#upload" aria-controls="upload" role="tab" data-toggle="tab">
+                            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+                            Subir
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#search" aria-controls="search" role="tab" data-toggle="tab">
+                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            Buscar en biblioteca
+                        </a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane active" id="upload">
+                        <form>
+                            <div class="pull-right">
+                                Mostrar junto al contenido
+                                <input type="checkbox" name="show_name" value="no">
+                            </div>
+                            <div class="form-group">
+                                <label for="fileName">Nombre</label>
+                                <input type="text" class="form-control" id="fileName" placeholder="Nombre">
+                            </div>
+                            <div class="pull-right">
+                                Mostrar junto al contenido
+                                <input type="checkbox" name="show_desc" value="no">
+                            </div>
+                            <div class="form-group">
+                                <label for="fileDesc">Descripci&oacute;n</label>
+                                <input type="text" class="form-control" id="fileDesc">
+                            </div>
+                            <div class="form-group">
+                                <label for="file">Archivo</label>
+                                <input type="file" id="file">
+                                <p class="help-block">Seleccionar archivo</p>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <button type="submit" class="btn btn-danger btn-block">
+                                        <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
+                                        Subir
+                                    </button>
+                                </div>
+                                <div class="col-md-6 text-muted" style="font-size: 10px;">
+                                    Recuerda que puedes agregar m&aacute;s datos a este contenido desde la Biblioteca Multimedia.
+                                </div>
+                            </div>
+                        </form>                    
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="search">
+                        <br />
+                        <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                        Estamos trabajando para Ud.
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+</body>
