--- a/cyclope/apps/media_widget/templates/media_widget/media_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_upload.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="mediaUpload" class="container-fluid">
+        <!-- TODO 2° STEP
         <div class="row">
             <div class="col-md-12">
                 <div class="dropdown">
@@ -41,6 +42,7 @@
             </div>
         </div>
         <hr />
+        -->
         <div class="row">
             <div class="col-md-12">
                 <ul class="nav nav-tabs" role="tablist">
@@ -59,36 +61,53 @@
                 </ul>
                 <div class="tab-content">
                     <div role="tabpanel" class="tab-pane active" id="upload">
-                        <form>
+                        <!-- Upload file to library before embedding it -->
+                        <form method="POST" action="{% url embed-new %}" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <!--
                             <div class="pull-right">
                                 Mostrar junto al contenido
                                 <input type="checkbox" name="show_name" value="no">
                             </div>
-                            <div class="form-group">
+                            -->
+                            <div class="form-group {%if form.name.errors%}has-error{%endif%}">
                                 <label for="fileName">Nombre</label>
-                                <input type="text" class="form-control" id="fileName" placeholder="Nombre">
+                                {{ form.name }}
+                                <span id="fileName" class="help-block">
+                                    {{ form.name.errors }}
+                                </span>
                             </div>
+                            <!--
                             <div class="pull-right">
                                 Mostrar junto al contenido
                                 <input type="checkbox" name="show_desc" value="no">
                             </div>
-                            <div class="form-group">
+                            -->
+                            <div class="form-group {%if form.description.errors%}has-error{%endif%}">
                                 <label for="fileDesc">Descripci&oacute;n</label>
-                                <input type="text" class="form-control" id="fileDesc">
+                                {{ form.description }}
+                                <span id="fileDesc" class="help-block">
+                                    {{ form.description.errors }}
+                                </span>
                             </div>
-                            <div class="form-group">
+
+                            <div class="form-group {%if form.multimedia.errors%}has-error bg-danger{%endif%}">
                                 <label for="file">Archivo</label>
-                                <input type="file" id="file">
-                                <p class="help-block">Seleccionar archivo</p>
+                                {{ form.multimedia }}
+                                <span id="helpName" class="help-block">
+                                    {{ form.multimedia.errors }}
+                                </span>
+                                <p class="help-block">Selecciona el archivo para subir</p>
                             </div>
+
                             <div class="row">
-                                <div class="col-md-6">
-                                    <button type="submit" class="btn btn-danger btn-block">
+                                <div class="col-xs-6">
+                                    <button type="submit" class="btn btn-warning btn-block">
                                         <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
                                         Subir
                                     </button>
                                 </div>
-                                <div class="col-md-6 text-muted" style="font-size: 10px;">
+                                <div class="col-xs-6 text-muted" style="font-size: 10px;">
                                     Recuerda que puedes agregar m&aacute;s datos a este contenido desde la Biblioteca Multimedia.
                                 </div>
                             </div>
