--- a/cyclope/apps/media_widget/templates/media_widget/media_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_upload.html
@@ -62,7 +62,7 @@
                 <div class="tab-content">
                     <div role="tabpanel" class="tab-pane active" id="upload">
                         <!-- Upload file to library before embedding it -->
-                        <form method="POST" action="{% url embed-new %}" enctype="multipart/form-data">
+                        <form method="POST" action="{% url embed-create %}" enctype="multipart/form-data">
                             {% csrf_token %}
                             <!--
                             <div class="pull-right">
